--- a/.config/.pr0f37.catpuccin_frappe.omp.json
+++ b/.config/.pr0f37.catpuccin_frappe.omp.json
@@ -1,122 +1,139 @@
 {
-    "$schema": "https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json",
-    "version": 2,
-    "final_space": true,
-    "blocks": [
+  "$schema": "https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json",
+  "palette": {
+    "base": "#303446",
+    "blue": "#8caaee",
+    "closer": "p:os",
+    "crust": "#232634",
+    "fail": "#BF616A",
+    "flamingo": "#eebebe",
+    "green": "#a6d189",
+    "lavender": "#babbf1",
+    "mantle": "#292c3c",
+    "maroon": "#ea999c",
+    "mauve": "#ca9ee6",
+    "os": "#ACB0BE",
+    "overlay 0": "#737994",
+    "overlay 1": "#838ba7",
+    "overlay 2": "#949cbb",
+    "peach": "#ef9f76",
+    "pink": "#f4b8e4",
+    "red": "#e78284",
+    "rosewater": "#f2d5cf",
+    "sapphire": "#85c1dc",
+    "sky": "#99d1db",
+    "subtext 0": "#a5adce",
+    "subtext 1": "#b5bfe2",
+    "surface 0": "#414559",
+    "surface 1": "#51576d",
+    "surface 2": "#626880",
+    "teal": "#81c8be",
+    "text": "#c6d0f5",
+    "yellow": "#e5c890"
+  },
+  "transient_prompt": {
+    "template": "\udb82\udfc9 \uf105 {{ .Segments.Path.Location }} \uf105 ",
+    "foreground": "p:closer",
+    "background": "transparent",
+    "newline": true
+  },
+  "blocks": [
+    {
+      "type": "prompt",
+      "alignment": "left",
+      "segments": [
         {
-            "type": "prompt",
-            "newline": true,
-            "alignment": "left",
-            "segments": [
-                {
-                    "type": "os",
-                    "style": "plain",
-                    "template": "{{.Icon}} <p:closer>\uf105</> ",
-                    "foreground": "p:os"
-                },
-                {
-                    "type": "status",
-                    "style": "diamond",
-                    "foreground_templates": [
-                        "{{ if .Error }}p:fail{{ end }}"
-                    ],
-                    "template": "\uef0e <p:closer>\uf105</> "
-                },
-                {
-                    "type": "git",
-                    "style": "plain",
-                    "template": "{{ .UpstreamIcon }}{{ .HEAD }}{{if .BranchStatus }} {{ .BranchStatus }}{{ end }}{{ if .Working.Changed }} \uf044 {{ .Working.String }}{{ end }}{{ if and (.Working.Changed) (.Staging.Changed) }} |{{ end }}{{ if .Staging.Changed }} \uf046 {{ .Staging.String }}{{ end }}{{ if gt .StashCount 0 }} \ueb4b {{ .StashCount }}{{ end }} <p:closer>\uf105</> ",
-                    "properties": {
-                        "branch_icon": "\ue725 ",
-                        "cherry_pick_icon": "\ue29b ",
-                        "commit_icon": "\uf417 ",
-                        "fetch_stash_count": true,
-                        "fetch_status": true,
-                        "fetch_upstream_icon": true,
-                        "fetch_worktree_count": true,
-                        "merge_icon": "\ue727 ",
-                        "no_commits_icon": "\uf0c3 ",
-                        "rebase_icon": "\ue728 ",
-                        "revert_icon": "\uf0e2 ",
-                        "tag_icon": "\uf412 "
-                    },
-                    "foreground": "p:lavender"
-                },
-                {
-                    "type": "python",
-                    "style": "plain",
-                    "foreground": "p:yellow",
-                    "template": " {{ if .Error }}{{ .Error }}{{ else }}{{ if .Venv }}{{ .Venv }} {{ end }}{{ .Full }}{{ end }} <p:closer>\uf105</> "
-                },
-                {
-                    "type": "rust",
-                    "style": "plain",
-                    "foreground": "p:peach",
-                    "template": "  {{ if .Error }}{{ .Error }}{{ else }}{{ .Full }}{{ end }} <p:closer>\uf105</> "
-                },
-                {
-                    "type": "lua",
-                    "style": "plain",
-                    "foreground": "p:blue",
-                    "template": "  {{ if .Error }}{{ .Error }}{{ else }}{{ .Full }}{{ end }} <p:closer>\uf105</> "
-                }
-            ]
+          "properties": {
+            "cache_duration": "none"
+          },
+          "template": "{{.Icon}} <p:closer>\uf105</> ",
+          "foreground": "p:os",
+          "type": "os",
+          "style": "plain"
         },
         {
-            "type": "prompt",
-            "alignment": "left",
-            "newline": true,
-            "segments": [
-                {
-                    "alias": "Path",
-                    "type": "path",
-                    "style": "plain",
-                    "template": "{{ .Path }} <p:closer>\uf105</> ",
-                    "properties": {
-                        "folder_icon": "..\ue5fe..",
-                        "home_icon": "\uf015",
-                        "style": "mixed"
-                    },
-                    "foreground": "p:blue"
-                }
-            ]
+          "properties": {
+            "cache_duration": "none"
+          },
+          "template": "\uef0e <p:closer>\uf105</> ",
+          "type": "status",
+          "style": "diamond",
+          "foreground_templates": [
+            "{{ if .Error }}p:fail{{ end }}"
+          ]
+        },
+        {
+          "properties": {
+            "branch_icon": "\ue725 ",
+            "cache_duration": "none",
+            "cherry_pick_icon": "\ue29b ",
+            "commit_icon": "\uf417 ",
+            "fetch_stash_count": true,
+            "fetch_status": true,
+            "fetch_upstream_icon": true,
+            "fetch_worktree_count": true,
+            "merge_icon": "\ue727 ",
+            "no_commits_icon": "\uf0c3 ",
+            "rebase_icon": "\ue728 ",
+            "revert_icon": "\uf0e2 ",
+            "tag_icon": "\uf412 "
+          },
+          "template": "{{ .UpstreamIcon }}{{ .HEAD }}{{if .BranchStatus }} {{ .BranchStatus }}{{ end }}{{ if .Working.Changed }} \uf044 {{ .Working.String }}{{ end }}{{ if and (.Working.Changed) (.Staging.Changed) }} |{{ end }}{{ if .Staging.Changed }} \uf046 {{ .Staging.String }}{{ end }}{{ if gt .StashCount 0 }} \ueb4b {{ .StashCount }}{{ end }} <p:closer>\uf105</> ",
+          "foreground": "p:lavender",
+          "type": "git",
+          "style": "plain"
+        },
+        {
+          "properties": {
+            "cache_duration": "none"
+          },
+          "template": "\ue235 {{ if .Error }}{{ .Error }}{{ else }}{{ if .Venv }}{{ .Venv }} {{ end }}{{ .Full }}{{ end }} <p:closer>\uf105</> ",
+          "foreground": "p:yellow",
+          "type": "python",
+          "style": "plain"
+        },
+        {
+          "properties": {
+            "cache_duration": "none"
+          },
+          "template": " \ue7a8 {{ if .Error }}{{ .Error }}{{ else }}{{ .Full }}{{ end }} <p:closer>\uf105</> ",
+          "foreground": "p:peach",
+          "type": "rust",
+          "style": "plain"
+        },
+        {
+          "properties": {
+            "cache_duration": "none"
+          },
+          "template": " \ue620 {{ if .Error }}{{ .Error }}{{ else }}{{ .Full }}{{ end }} <p:closer>\uf105</> ",
+          "foreground": "p:blue",
+          "type": "lua",
+          "style": "plain"
         }
-    ],
-    "transient_prompt": {
-        "newline": true,
-        "background": "transparent",
-        "foreground": "p:closer",
-        "template": "\udb82\udfc9 \uf105 {{ .Segments.Path.Location }} \uf105 "
+      ],
+      "newline": true
     },
-    "palette": {
-        "closer": "p:os",
-        "os": "#ACB0BE",
-        "fail": "#BF616A",
-        "rosewater": "#f2d5cf",
-        "flamingo": "#eebebe",
-        "pink": "#f4b8e4",
-        "mauve": "#ca9ee6",
-        "red": "#e78284",
-        "maroon": "#ea999c",
-        "peach": "#ef9f76",
-        "yellow": "#e5c890",
-        "green": "#a6d189",
-        "teal": "#81c8be",
-        "sky": "#99d1db",
-        "sapphire": "#85c1dc",
-        "blue": "#8caaee",
-        "lavender": "#babbf1",
-        "text": "#c6d0f5",
-        "subtext 1": "#b5bfe2",
-        "subtext 0": "#a5adce",
-        "overlay 2": "#949cbb",
-        "overlay 1": "#838ba7",
-        "overlay 0": "#737994",
-        "surface 2": "#626880",
-        "surface 1": "#51576d",
-        "surface 0": "#414559",
-        "base": "#303446",
-        "mantle": "#292c3c",
-        "crust": "#232634"
+    {
+      "type": "prompt",
+      "alignment": "left",
+      "segments": [
+        {
+          "properties": {
+            "cache_duration": "none",
+            "folder_icon": "..\ue5fe..",
+            "home_icon": "\uf015",
+            "style": "agnoster_full"
+          },
+          "alias": "Path",
+          "template": "{{ .Path }} <p:closer>\uf105</> ",
+          "foreground": "p:blue",
+          "type": "path",
+          "style": "plain"
+        }
+      ],
+      "newline": true
     }
+  ],
+  "version": 3,
+  "final_space": true
 }
