--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -8,8 +8,8 @@ hide_when_typing = true
 [cursor]
 style.shape = "Underline"
 [font]
-normal = { family = "UbuntuSansMono Nerd Font Mono", style = "Regular" }
-size = 15.0
+normal = { family = "UbuntuMono Nerd Font Mono", style = "Regular" }
+size = 16.0
 
 [env]
 TERM = "xterm-256color"
