--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,10 +18,10 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+# bind -n M-Left select-pane -L
+# bind -n M-Right select-pane -R
+# bind -n M-Up select-pane -U
+# bind -n M-Down select-pane -D
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
@@ -39,8 +39,6 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-run '~/.tmux/plugins/tpm/tpm'
-
 
 
 # set vi-mode
@@ -52,3 +50,5 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 bind '_' split-window -v -c "#{pane_current_path}"
 bind '|' split-window -h -c "#{pane_current_path}"
+
+run '~/.config/tmux/plugins/tpm/tpm'
