--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,15 +1,12 @@
 [general]
-import = [
-    "~/.config/alacritty/keybindings.toml",
-    "~/.config/alacritty/catppuccin-frappe.toml",
-]
+import = ["~/.config/alacritty/catppuccin-frappe.toml"]
 [mouse]
-hide_when_typing = false 
+hide_when_typing = false
 [cursor]
 style.shape = "Underline"
 [font]
 normal = { family = "UbuntuSansMono Nerd Font Mono", style = "Regular" }
-size = 15.0
+size = 14.0
 
 [env]
 TERM = "xterm-256color"
@@ -25,6 +22,6 @@ option_as_alt = "OnlyLeft"
 history = 5000
 [keyboard]
 bindings = [
-    { key = "Right", mods = "Alt", chars = "\u001BF" },
-    { key = "Left", mods = "Alt", chars = "\u001BB" },
+  { key = "Right", mods = "Alt", chars = "\u001BF" },
+  { key = "Left", mods = "Alt", chars = "\u001BB" },
 ]
