--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -5,7 +5,9 @@ hide_when_typing = false
 [cursor]
 style.shape = "Underline"
 [font]
+# normal = { family = "JetBrainsMono Nerd Font Mono", style = "Light" }
 normal = { family = "UbuntuSansMono Nerd Font Mono", style = "Regular" }
+
 size = 14.0
 
 [env]
