new theme and working python dap & neotest

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,10 +1,10 @@
 [general]
-import = ["~/.config/alacritty/catppuccin-frappe.toml"]
+import = ["~/.config/alacritty/catppuccin-macchiato.toml"]
 [mouse]
 hide_when_typing = false
 [cursor]
 style.shape = "Underline"
-vi_mode_style = "Block"
+vi_mode_style = "Underline"
 [font]
 # normal = { family = "JetBrainsMono Nerd Font Mono", style = "Light" }
 normal = { family = "UbuntuSansMono Nerd Font Mono", style = "Regular" }
