--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,12 +17,6 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Use Alt-arrow keys without prefix key to switch panes
-# bind -n M-Left select-pane -L
-# bind -n M-Right select-pane -R
-# bind -n M-Up select-pane -U
-# bind -n M-Down select-pane -D
-
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
@@ -31,7 +25,6 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'frappe'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -39,6 +32,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+set -g @catppuccin_flavour 'macchiato'
 
 
 # set vi-mode
