--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -6,8 +6,8 @@ hide_when_typing = false
 style.shape = "Underline"
 vi_mode_style = "Underline"
 [font]
-# normal = { family = "JetBrainsMono Nerd Font Mono", style = "Light" }
-normal = { family = "UbuntuSansMono Nerd Font Mono", style = "Regular" }
+normal = { family = "JetBrainsMono Nerd Font Mono", style = "Light" }
+# normal = { family = "UbuntuSansMono Nerd Font Mono", style = "Regular" }
 
 size = 14.0
 
