--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -31,6 +31,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @catppuccin_flavour 'macchiato'
 
