--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -33,7 +33,7 @@ set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-set -g @catppuccin_flavour 'macchiato'
+set -g @catppuccin_flavour 'frappe'
 
 
 # set vi-mode
